objects/Tools.txt
sources/AscendingIterator.cpp:69:31: error: taking the address of a temporary object of type 'std::vector<int>' [-Waddress-of-temporary]
    vector<int> *aElements1 = &this->mContainer_.getAscendingElements();
                              ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
sources/AscendingIterator.cpp:70:31: error: taking the address of a temporary object of type 'std::vector<int>' [-Waddress-of-temporary]
    vector<int> *aElements2 = &other.getMagicalContainer().getAscendingElements();
                              ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
